# django-apm-tests

./: .dockerignore  Dockerfile  README.md  compose.yaml  conftest.py  fly.toml  gunicorn.py  pyproject.toml
.github/workflows/: ci.yml
contrib/: env-sample
core/: admin.py  models.py  serializers.py  urls.py  views.py
core/migrations/: 0001_initial.py  0002_alter_author_name.py  0003_alter_book_authors.py
core/templates/core/: home.html
core/tests/: tests_author.py  tests_books.py
projeto/: asgi.py  settings.py  urls.py  wsgi.py
staticfiles/: staticfiles.json
